Fix about me spacing issue

--- a/css/style.css
+++ b/css/style.css
@@ -380,9 +380,6 @@ body {
 /*---- End Tech Stack Section ----*/
 
 /*---- Start Contact Section ----*/
-.about-me {
-  padding: 5px;
-}
 .about-card {
   width: 100%;
   padding: 5px;
@@ -407,7 +404,7 @@ body {
 
 #contact {
   background: rgb(23, 54, 82);
-  padding: 60px 5px 20px 5px;
+  padding: 60px 5px 40px 5px;
 }
 
 #contact h1 {
@@ -486,6 +483,11 @@ Extra (xl) large devices (large desktops, 1200px and up)
 @media (min-width: 1200px) { ... }
 
 =============*/
+@media (min-width: 992px) {
+  #about-me {
+    padding-left: 80px;
+  }
+}
 
 @media (max-width: 815px) {
   .navbar {
